[tool.poetry]
name = "s3etag"
version = "0.1.3"
description = "Compute AWS S3 Etags."
license = "Apache-2.0"
authors = ["LiosK <contact@mail.liosk.net>"]
homepage = "https://github.com/LiosK/s3etag"

[tool.poetry.scripts]
s3etag = "s3etag:main"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
